feat: filter hotel
