# modules/hotel/api/handler/filter_hotel_handler.go
@@ -10,6 +10,17 @@ import (
 	"trekkstay/pkgs/log"
 )
 
+// HandleFilterHotel	godoc
+// @Summary      Filter hotel
+// @Description  Filter hotel
+// @Tags         Hotel
+// @Produce      json
+// @Param        FilterHotelReq  query	req.FilterHotelReq  true  "FilterHotelReq JSON"
+// @Success      200 {object}  	res.SuccessResponse
+// @failure		 400 {object} 	res.ErrorResponse
+// @failure		 500 {object} 	res.ErrorResponse
+// @Router       /hotel/filter [post]
+// @Security     JWT
 func (h hotelHandler) HandleFilterHotel(c *gin.Context) {
 	// Bind request
 	var filterHotelReq req.FilterHotelReq
